--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,7 @@ x-user:
   &default-user
     # The default user under which the containers should run. Change this if you are on linux and run with another user than id `1000`
     user: '1000'
-x-release:
-  &core-release-version: '1.2.3'
+
 volumes:
   files:
     {}
@@ -32,8 +31,7 @@ services:
     build:
       context: .
       dockerfile: lagoon/cli.dockerfile
-      args:
-        CORE_RELEASE_VERSION: '1.2.3'
+    image: &cli-image ${COMPOSE_PROJECT_NAME:-drupal9-example-simple}-cli # this image will be reused as `CLI_IMAGE` in subsequent Docker builds
     labels:
       # Lagoon Labels
       lagoon.type: cli-persistent
@@ -52,8 +50,7 @@ services:
       context: .
       dockerfile: lagoon/nginx.dockerfile
       args:
-        CORE_RELEASE_VERSION: '1.2.3'
-    # image: ghcr.io/reload/dpl-poc-nginx:1.2.3
+        CLI_IMAGE: *cli-image # Inject the name of the cli image
     labels:
       lagoon.type: nginx-php-persistent
       lagoon.persistent: /app/web/sites/default/files/ # define where the persistent storage should be mounted too
@@ -74,8 +71,7 @@ services:
       context: .
       dockerfile: lagoon/php.dockerfile
       args:
-        CORE_RELEASE_VERSION: '1.2.3'
-    # image: ghcr.io/reload/dpl-poc-php:1.2.3
+        CLI_IMAGE: *cli-image
     labels:
       lagoon.type: nginx-php-persistent
       lagoon.name: nginx # we want this service be part of the nginx pod in Lagoon
